Implement a sampler and the initial V1 instrument SPI